--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="./nft-preview-card-component-main/images/image-equilibrium.jpg" alt="img" class="img">
+    <img src="image-equilibrium.jpg" alt="img" class="img">
     <h2> Equilibrium #3429</h2>
     <p>Our Equilibrium collection promotes balance and calm.</p>
 
